# hyperliquid-cpp

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  TODO.md  compile.sh
examples/: CMakeLists.txt  basic_market_order.cpp  basic_order.cpp  bulk_orders.cpp  query_positions.cpp  spot_trading.cpp
include/hyperliquid/: api.hpp  errors.hpp  exchange.hpp  info.hpp  types.hpp
include/hyperliquid/utils/: constants.hpp  conversions.hpp  signing.hpp
src/: api.cpp  exchange.cpp  info.cpp  types.cpp
src/utils/: conversions.cpp  signing.cpp
src/utils/crypto/: ecdsa.cpp  eip712.cpp  keccak.cpp
